test_outputs/connlist/ipblockstest_connlist_output.txt
0.0.0.0-9.255.255.255[External] => default/cognetive-agents-agent[DaemonSet] : All Connections
0.0.0.0-9.255.255.255[External] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
0.0.0.0-9.255.255.255[External] => default/cognetive-agents[DaemonSet] : All Connections
0.0.0.0-9.255.255.255[External] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
0.0.0.0-9.255.255.255[External] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
0.0.0.0-9.255.255.255[External] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
0.0.0.0-9.255.255.255[External] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
0.0.0.0-9.255.255.255[External] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
0.0.0.0-9.255.255.255[External] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
0.0.0.0-9.255.255.255[External] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
0.0.0.0-9.255.255.255[External] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
0.0.0.0-9.255.255.255[External] => kube-system/calico-node-tier[DaemonSet] : UDP 53
0.0.0.0-9.255.255.255[External] => kube-system/calico-node[DaemonSet] : All Connections
0.0.0.0-9.255.255.255[External] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
0.0.0.0-9.255.255.255[External] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] : UDP 53
0.0.0.0-9.255.255.255[External] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
0.0.0.0-9.255.255.255[External] => kube-system/ibm-keepalived-watcher[DaemonSet] : UDP 53
0.0.0.0-9.255.255.255[External] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet] : UDP 53
0.0.0.0-9.255.255.255[External] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
0.0.0.0-9.255.255.255[External] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] : UDP 53
0.0.0.0-9.255.255.255[External] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : UDP 53
0.0.0.0-9.255.255.255[External] => kube-system/vpn-858f6d9777[ReplicaSet] : UDP 53
10.0.0.0-10.255.255.255[External] => default/cognetive-agents-agent[DaemonSet] : All Connections
10.0.0.0-10.255.255.255[External] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
10.0.0.0-10.255.255.255[External] => default/cognetive-agents[DaemonSet] : All Connections
10.0.0.0-10.255.255.255[External] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
10.0.0.0-10.255.255.255[External] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
10.0.0.0-10.255.255.255[External] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
10.0.0.0-10.255.255.255[External] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
10.0.0.0-10.255.255.255[External] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
10.0.0.0-10.255.255.255[External] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
10.0.0.0-10.255.255.255[External] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
10.0.0.0-10.255.255.255[External] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
10.0.0.0-10.255.255.255[External] => kube-system/calico-node[DaemonSet] : All Connections
10.0.0.0-10.255.255.255[External] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
10.0.0.0-10.255.255.255[External] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
10.0.0.0-10.255.255.255[External] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
11.0.0.0-172.20.255.255[External] => default/cognetive-agents-agent[DaemonSet] : All Connections
11.0.0.0-172.20.255.255[External] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
11.0.0.0-172.20.255.255[External] => default/cognetive-agents[DaemonSet] : All Connections
11.0.0.0-172.20.255.255[External] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
11.0.0.0-172.20.255.255[External] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
11.0.0.0-172.20.255.255[External] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
11.0.0.0-172.20.255.255[External] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
11.0.0.0-172.20.255.255[External] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
11.0.0.0-172.20.255.255[External] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
11.0.0.0-172.20.255.255[External] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
11.0.0.0-172.20.255.255[External] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
11.0.0.0-172.20.255.255[External] => kube-system/calico-node-tier[DaemonSet] : UDP 53
11.0.0.0-172.20.255.255[External] => kube-system/calico-node[DaemonSet] : All Connections
11.0.0.0-172.20.255.255[External] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
11.0.0.0-172.20.255.255[External] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] : UDP 53
11.0.0.0-172.20.255.255[External] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
11.0.0.0-172.20.255.255[External] => kube-system/ibm-keepalived-watcher[DaemonSet] : UDP 53
11.0.0.0-172.20.255.255[External] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet] : UDP 53
11.0.0.0-172.20.255.255[External] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
11.0.0.0-172.20.255.255[External] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] : UDP 53
11.0.0.0-172.20.255.255[External] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : UDP 53
11.0.0.0-172.20.255.255[External] => kube-system/vpn-858f6d9777[ReplicaSet] : UDP 53
172.21.0.0-172.21.255.255[External] => default/cognetive-agents-agent[DaemonSet] : All Connections
172.21.0.0-172.21.255.255[External] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
172.21.0.0-172.21.255.255[External] => default/cognetive-agents[DaemonSet] : All Connections
172.21.0.0-172.21.255.255[External] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
172.21.0.0-172.21.255.255[External] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
172.21.0.0-172.21.255.255[External] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
172.21.0.0-172.21.255.255[External] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
172.21.0.0-172.21.255.255[External] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
172.21.0.0-172.21.255.255[External] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
172.21.0.0-172.21.255.255[External] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
172.21.0.0-172.21.255.255[External] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
172.21.0.0-172.21.255.255[External] => kube-system/calico-node[DaemonSet] : All Connections
172.21.0.0-172.21.255.255[External] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
172.21.0.0-172.21.255.255[External] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
172.21.0.0-172.21.255.255[External] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
172.22.0.0-172.29.255.255[External] => default/cognetive-agents-agent[DaemonSet] : All Connections
172.22.0.0-172.29.255.255[External] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
172.22.0.0-172.29.255.255[External] => default/cognetive-agents[DaemonSet] : All Connections
172.22.0.0-172.29.255.255[External] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
172.22.0.0-172.29.255.255[External] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
172.22.0.0-172.29.255.255[External] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
172.22.0.0-172.29.255.255[External] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
172.22.0.0-172.29.255.255[External] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
172.22.0.0-172.29.255.255[External] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
172.22.0.0-172.29.255.255[External] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
172.22.0.0-172.29.255.255[External] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
172.22.0.0-172.29.255.255[External] => kube-system/calico-node-tier[DaemonSet] : UDP 53
172.22.0.0-172.29.255.255[External] => kube-system/calico-node[DaemonSet] : All Connections
172.22.0.0-172.29.255.255[External] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
172.22.0.0-172.29.255.255[External] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] : UDP 53
172.22.0.0-172.29.255.255[External] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
172.22.0.0-172.29.255.255[External] => kube-system/ibm-keepalived-watcher[DaemonSet] : UDP 53
172.22.0.0-172.29.255.255[External] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet] : UDP 53
172.22.0.0-172.29.255.255[External] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
172.22.0.0-172.29.255.255[External] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] : UDP 53
172.22.0.0-172.29.255.255[External] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : UDP 53
172.22.0.0-172.29.255.255[External] => kube-system/vpn-858f6d9777[ReplicaSet] : UDP 53
172.30.0.0-172.30.255.255[External] => default/cognetive-agents-agent[DaemonSet] : All Connections
172.30.0.0-172.30.255.255[External] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
172.30.0.0-172.30.255.255[External] => default/cognetive-agents[DaemonSet] : All Connections
172.30.0.0-172.30.255.255[External] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
172.30.0.0-172.30.255.255[External] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
172.30.0.0-172.30.255.255[External] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
172.30.0.0-172.30.255.255[External] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
172.30.0.0-172.30.255.255[External] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
172.30.0.0-172.30.255.255[External] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
172.30.0.0-172.30.255.255[External] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
172.30.0.0-172.30.255.255[External] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
172.30.0.0-172.30.255.255[External] => kube-system/calico-node[DaemonSet] : All Connections
172.30.0.0-172.30.255.255[External] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
172.30.0.0-172.30.255.255[External] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
172.30.0.0-172.30.255.255[External] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
172.31.0.0-255.255.255.255[External] => default/cognetive-agents-agent[DaemonSet] : All Connections
172.31.0.0-255.255.255.255[External] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
172.31.0.0-255.255.255.255[External] => default/cognetive-agents[DaemonSet] : All Connections
172.31.0.0-255.255.255.255[External] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
172.31.0.0-255.255.255.255[External] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
172.31.0.0-255.255.255.255[External] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
172.31.0.0-255.255.255.255[External] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
172.31.0.0-255.255.255.255[External] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
172.31.0.0-255.255.255.255[External] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
172.31.0.0-255.255.255.255[External] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
172.31.0.0-255.255.255.255[External] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
172.31.0.0-255.255.255.255[External] => kube-system/calico-node-tier[DaemonSet] : UDP 53
172.31.0.0-255.255.255.255[External] => kube-system/calico-node[DaemonSet] : All Connections
172.31.0.0-255.255.255.255[External] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
172.31.0.0-255.255.255.255[External] => kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] : UDP 53
172.31.0.0-255.255.255.255[External] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
172.31.0.0-255.255.255.255[External] => kube-system/ibm-keepalived-watcher[DaemonSet] : UDP 53
172.31.0.0-255.255.255.255[External] => kube-system/ibm-kube-fluentd-with-tier[DaemonSet] : UDP 53
172.31.0.0-255.255.255.255[External] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
172.31.0.0-255.255.255.255[External] => kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] : UDP 53
172.31.0.0-255.255.255.255[External] => kube-system/tiller-deploy-5c45c9966b[ReplicaSet] : UDP 53
172.31.0.0-255.255.255.255[External] => kube-system/vpn-858f6d9777[ReplicaSet] : UDP 53
default/cognetive-agents-agent[DaemonSet] => 0.0.0.0-255.255.255.255[External] : All Connections
default/cognetive-agents-agent[DaemonSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
default/cognetive-agents-agent[DaemonSet] => default/cognetive-agents[DaemonSet] : All Connections
default/cognetive-agents-agent[DaemonSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
default/cognetive-agents-agent[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
default/cognetive-agents-agent[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
default/cognetive-agents-agent[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
default/cognetive-agents-agent[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
default/cognetive-agents-agent[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
default/cognetive-agents-agent[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
default/cognetive-agents-agent[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
default/cognetive-agents-agent[DaemonSet] => kube-system/calico-node[DaemonSet] : All Connections
default/cognetive-agents-agent[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
default/cognetive-agents-agent[DaemonSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
default/cognetive-agents-agent[DaemonSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
default/cognetive-agents-analyzer[DaemonSet] => 0.0.0.0-255.255.255.255[External] : All Connections
default/cognetive-agents-analyzer[DaemonSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
default/cognetive-agents-analyzer[DaemonSet] => default/cognetive-agents[DaemonSet] : All Connections
default/cognetive-agents-analyzer[DaemonSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
default/cognetive-agents-analyzer[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
default/cognetive-agents-analyzer[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
default/cognetive-agents-analyzer[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
default/cognetive-agents-analyzer[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
default/cognetive-agents-analyzer[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
default/cognetive-agents-analyzer[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
default/cognetive-agents-analyzer[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
default/cognetive-agents-analyzer[DaemonSet] => kube-system/calico-node[DaemonSet] : All Connections
default/cognetive-agents-analyzer[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
default/cognetive-agents-analyzer[DaemonSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
default/cognetive-agents-analyzer[DaemonSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
default/cognetive-agents[DaemonSet] => 0.0.0.0-255.255.255.255[External] : All Connections
default/cognetive-agents[DaemonSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
default/cognetive-agents[DaemonSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
default/cognetive-agents[DaemonSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
default/cognetive-agents[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
default/cognetive-agents[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
default/cognetive-agents[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
default/cognetive-agents[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
default/cognetive-agents[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
default/cognetive-agents[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
default/cognetive-agents[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
default/cognetive-agents[DaemonSet] => kube-system/calico-node[DaemonSet] : All Connections
default/cognetive-agents[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
default/cognetive-agents[DaemonSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
default/cognetive-agents[DaemonSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => default/cognetive-agents[DaemonSet] : All Connections
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => default/cognetive-agents[DaemonSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => default/cognetive-agents[DaemonSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => default/cognetive-agents[DaemonSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => default/cognetive-agents[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => default/cognetive-agents[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => default/cognetive-agents[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => default/cognetive-agents[DaemonSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
kube-system/calico-node-tier[DaemonSet] => 0.0.0.0-255.255.255.255[External] : All Connections
kube-system/calico-node-tier[DaemonSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
kube-system/calico-node-tier[DaemonSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
kube-system/calico-node-tier[DaemonSet] => default/cognetive-agents[DaemonSet] : All Connections
kube-system/calico-node-tier[DaemonSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/calico-node-tier[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
kube-system/calico-node-tier[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
kube-system/calico-node-tier[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/calico-node-tier[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/calico-node-tier[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/calico-node-tier[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/calico-node-tier[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/calico-node-tier[DaemonSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/calico-node-tier[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/calico-node-tier[DaemonSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
kube-system/calico-node-tier[DaemonSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
kube-system/calico-node[DaemonSet] => 0.0.0.0-255.255.255.255[External] : All Connections
kube-system/calico-node[DaemonSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
kube-system/calico-node[DaemonSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
kube-system/calico-node[DaemonSet] => default/cognetive-agents[DaemonSet] : All Connections
kube-system/calico-node[DaemonSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
kube-system/calico-node[DaemonSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => default/cognetive-agents[DaemonSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
kube-system/heapster-7df8cb8c66[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => default/cognetive-agents[DaemonSet] : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
kube-system/ibm-file-plugin-7bfb8b69bf[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => 0.0.0.0-255.255.255.255[External] : All Connections
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => default/cognetive-agents[DaemonSet] : All Connections
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
kube-system/ibm-keepalived-watcher[DaemonSet] => 0.0.0.0-255.255.255.255[External] : All Connections
kube-system/ibm-keepalived-watcher[DaemonSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
kube-system/ibm-keepalived-watcher[DaemonSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
kube-system/ibm-keepalived-watcher[DaemonSet] => default/cognetive-agents[DaemonSet] : All Connections
kube-system/ibm-keepalived-watcher[DaemonSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/ibm-keepalived-watcher[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
kube-system/ibm-keepalived-watcher[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
kube-system/ibm-keepalived-watcher[DaemonSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => 0.0.0.0-255.255.255.255[External] : All Connections
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => default/cognetive-agents[DaemonSet] : All Connections
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
kube-system/ibm-kube-fluentd-with-tier[DaemonSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
kube-system/ibm-kube-fluentd[DaemonSet] => 0.0.0.0-255.255.255.255[External] : All Connections
kube-system/ibm-kube-fluentd[DaemonSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
kube-system/ibm-kube-fluentd[DaemonSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
kube-system/ibm-kube-fluentd[DaemonSet] => default/cognetive-agents[DaemonSet] : All Connections
kube-system/ibm-kube-fluentd[DaemonSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/ibm-kube-fluentd[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
kube-system/ibm-kube-fluentd[DaemonSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
kube-system/ibm-kube-fluentd[DaemonSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/ibm-kube-fluentd[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/ibm-kube-fluentd[DaemonSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/ibm-kube-fluentd[DaemonSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/ibm-kube-fluentd[DaemonSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/ibm-kube-fluentd[DaemonSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/ibm-kube-fluentd[DaemonSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/ibm-kube-fluentd[DaemonSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => default/cognetive-agents[DaemonSet] : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
kube-system/ibm-storage-watcher-8494b4b8bb[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => default/cognetive-agents[DaemonSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
kube-system/tiller-deploy-5c45c9966b[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => 0.0.0.0-255.255.255.255[External] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => default/cognetive-agents-agent[DaemonSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => default/cognetive-agents-analyzer[DaemonSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => default/cognetive-agents[DaemonSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => default/cognetive-local-analyzer-7d77fb55cc[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-10-5c9dd7c9c[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => ibm-system/ibm-cloud-provider-ip-169-60-164-14-6d448884df[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system-dummy-to-ignore/calico-kube-controllers-7694668c77[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-amd64-d66bf76db[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system-dummy-to-ignore/kube-dns-autoscaler-78f5fdbd46[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system-dummy-to-ignore/kubernetes-dashboard-5b5f985bcf[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system-dummy-to-ignore/public-cre08b89c167414305a1afb205d0bd346f-alb1-8489b8458f[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/calico-node[DaemonSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/heapster-7df8cb8c66[ReplicaSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/ibm-keepalived-watcher-for-demo[DaemonSet] : All Connections
kube-system/vpn-858f6d9777[ReplicaSet] => kube-system/ibm-kube-fluentd[DaemonSet] : All Connections
